--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/fire": "^7.5.0",
     "@angular/forms": "^14.0.0",
+    "@angular/localize": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@ngrx/store": "^1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.10.2",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.0",
     "firebase": "^9.15.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
