--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@ngx-formly/bootstrap": "^6.0.4",
+    "@ngx-formly/core": "^6.0.4",
     "@popperjs/core": "^2.11.6",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
@@ -35,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.4",
+    "@ngx-formly/schematics": "^6.0.4",
     "@types/jasmine": "~4.3.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
