--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@ngrx/effects": "^15.1.0",
+    "@ngrx/store": "^15.1.0",
     "@ngx-formly/bootstrap": "^6.0.4",
     "@ngx-formly/core": "^6.0.4",
     "@popperjs/core": "^2.11.6",
