--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.15.0",
     "tslib": "^2.4.1",
+    "typescript": "^4.8.4",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
